2013-11-29  Julien Bect  <julien.bect@supelec.fr>

	Move octave_quantile to the MOLE.

	* misc/stats: removed
	* misc/stats/octave_quantile.m: removed
	* misc/mole/matlab/stats: new directory
	* misc/mole/matlab/stats/quantile.m: formerly known as
	misc/stats/octave_quantile
	* utils/arrays/@stk_dataframe/quantile.m: modified
	* misc/config/stk_path.m: modified

	Make stk_runexamples fail if at least one example failed.

	* trunk/misc/test/stk_runexamples.m: modified

2013-11-28  Julien Bect  <julien.bect@supelec.fr>

	Add a new MOLE function: graphicstoolkit.

	* misc/mole/matlab/graphics_toolkit.m: removed
	* misc/mole/common/graphicstoolkit.m: new function
	* examples/03_miscellaneous/stk_example_misc02: modified

2013-11-25  Julien Bect  <julien.bect@supelec.fr>

	Use a more conservative form of subplot (without options).

	* misc/plot/stk_subplot.m: modified

	Fix a bug in stk_path.

	* misc/config/stk_path.m: modified

2013-11-24  Julien Bect  <julien.bect@supelec.fr>

	Fix a typo (missing parenthesis) in stk_rescale.

	* utils/arrays/generic/stk_rescale.m: modified

	Fix a copy-paste typo in stk_path.

	* misc/config/stk_path.m: modified

	Increase test tolerance.

	* misc/distrib/distrib_student_cdf.m: modified

	Provide a replacement for graphics_toolkit in Matlab.

	* misc/mole/matlab/graphics_toolkit.m: modified

	Remove the legend in example 'misc02' if using gnuplot.

	* examples/03_miscellaneous/stk_example_misc02.m: modified

	Choose a slightly less singular example for 'doe03'.

	* examples/02_design_of_experiments/stk_example_doe03.m: modified

	Fix stk_select_optimizer: sqp is in Octave core.

	* misc/config/stk_select_optimizer.m: modified

	Add documentation for stk_select_optimizer.

	* misc/config/stk_select_optimizer.m: modified

2013-11-22  Julien Bect  <julien.bect@supelec.fr>

	Add a new example.

	* examples/01_kriging_basics/stk_example_kb07.m: new script

2013-11-19  Julien Bect  <julien.bect@supelec.fr>
